<resources>
    <string name="app_name">HvZMasterApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_text1">Player List</string>
    <string name="menu_text2">Tagging</string>
    <string name="menu_text3">Missions</string>
    <string name="menu_text4">Map</string>
    <string name="menu_text5">Cooldown Timer</string>
    <string name="menu_text6">Revive</string>
    <string name="menu_text7">Stats</string>
    <string name="menu_text8">Complaints</string>
    <string name="menu_text9">Start Game</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register</string>
    <string name="action_main">Main</string>
    <string name="action_register">Register</string>
    <string name="getcode">Get Feed Code</string>
    <string name="pwprompt">Enter password</string>
    <string name="usrprompt">Enter username</string>
    <string name="codeprompt">Enter feed code</string>
    <string name="adminprompt">Admin?</string>
    <string name="nameprompt">Enter name of game</string>
    <string name="passreprompt">Re-type password</string>
    <string name="title_activity_plist">Player List</string>
    <string name="humans">Humans</string>
    <string name="zombies">Zombies</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>
    <string name="leave_game">Leave Game</string>
    <string name="title_activity_score_screen">ScoreScreenActivity</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_complaint">ComplaintActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_complaint_list">ComplaintListActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
</resources>
