<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/main_player" >

    <TextView
        android:id="@+id/playerlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/feedcodelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:id="@+id/card1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:id="@+id/menu_text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text1"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="viewPlayerList"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:id="@+id/card2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text2"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/menu_text2"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="tag"/>
        </android.support.v7.widget.CardView>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card3"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:id="@+id/menu_text3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text3"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:clickable="true"
                android:onClick="listMissions"
                android:background="?android:attr/selectableItemBackground" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:id="@+id/card4"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="false"
            android:visibility="invisible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text8"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/menu_text4"
                android:clickable="true"
                android:onClick="revive"
                android:background="?android:attr/selectableItemBackground" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card5"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:id="@+id/menu_text5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Map"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="map" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:id="@+id/card6"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Cooldown Timer"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/menu_text6"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="tagCooldownTimer" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card7"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="false">
            <TextView
                android:id="@+id/menu_text7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text7"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:id="@+id/card8"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text8"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/menu_text8"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>