<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/adminlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        card_view:cardCornerRadius="0dp"
        android:id="@+id/card0"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:clickable="false"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menu_text9"
            android:textColor="#000000"
            android:textSize="22sp"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/toggle"
            android:clickable="true"
            android:onClick="toggleGame"
            android:background="?android:attr/selectableItemBackground" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:id="@+id/card1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:id="@+id/menu_text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text1"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="viewPlayerList"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:id="@+id/card2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_text3"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/menu_text3"
                android:clickable="true"
                android:onClick="listMissions"
                android:background="?android:attr/selectableItemBackground" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Create Mission"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="createMission"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            card_view:cardCornerRadius="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Revive Codes"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center_vertical|center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="viewReviveCodes"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>